# bluepill-environment-monitor

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb  runner.sh
.cargo/: config
src/: bus.rs  led.rs  ledhal.rs  main copy.rs  main.rs  main4.rs  mhz19.rs  nohal.rs
