[package]
authors = ["Lucjan Suski <lucjansuski@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-semihosting = "0.3.3"
cortex-m-rt = "0.6.10"
cortex-m-rtfm = "0.5.1"
panic-semihosting = "0.5.2"
embedded-hal = "0.2.3"
ssd1306 = "0.3.0-alpha.2"
bme280 = "0.1.2"
shared-bus = "0.1.4"
alloc-cortex-m = "0.3.5"
asm-delay = "0.7.0"
bitrate = "0.1.1"
heapless = "0.5.1"
mh-z19 = "0.3.0"
nb = "0.1.2"

[dependencies.stm32f1]
version = "0.9.0"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.5.2"
features = ["stm32f103", "rt"]

[dependencies.embedded-graphics]
version = "0.6.0-alpha.2"
features = ["bmp"]


# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
